--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ li {
     display: block;
     height: 2px;
     width: 100%;
-    background-color: #0e6922;
+    background-color: #FF0000;
 }
 
 .menu__list {
@@ -213,7 +213,7 @@ li {
 
     .pointer {
         display: block;
-        background: #2196f3;
+        background: #2400FF;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, .15);
         border-radius: 4px;
         padding: 10px 32px;
@@ -222,7 +222,7 @@ li {
         margin-top: 30px;
     }
 .btn:hover{
-   color: rgb(9, 9, 9);
+   color: rgb(223, 233, 37);
 } 
 .pointer:hover{
     opacity: 0,6;
@@ -547,7 +547,7 @@ li {
 
 
 /*---------FOOTER-----------*/
-.footer__container{
+/*.footer__container{
     min-width: 1146px;
     min-height: 128px;
     margin-top: 80px;
@@ -558,4 +558,147 @@ li {
     text-align: center;
     margin-bottom: 50px;
     color: #F7F7F7;
+}*/
+
+
+.footer__container {
+    background: #dedddd;
+    padding-top: 60px;
+    padding-bottom: 40px;
+    margin-top: 50px;
+}
+
+.name {
+
+    color: #121212;
+
+}
+
+.body-footer {
+    display: flex;
+    gap: 50px;
+}
+
+.body-footer__column_full {
+    flex: 1 1 auto;
+}
+
+.body-footer__logo {
+    display: inline-block;
+    
+}
+
+.body-footer__logo:not(:last-child) {
+    margin-bottom: 28px;
+}
+
+
+.contacts-footer__item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.contacts-footer__link {
+    color: #666;
+    display: inline-block;
+    line-height: 24px;
+    padding-left: 44px;
+}
+
+.contacts-footer__link:hover {
+    text-decoration: underline;
+}
+
+.contacts-footer__link_mail {
+    background: url('../img/sms.svg') left no-repeat;
+}
+
+.contacts-footer__link_location {
+    background: url('../img/location.svg') left no-repeat;
+}
+
+.body-footer__menu {}
+
+.menu-footer {
+    display: flex;
+    gap: 120px;
+    justify-content: center;
+}
+
+.menu-footer__column {}
+
+.menu-footer__title {
+    text-transform: uppercase;
+    color: #121212;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    margin-bottom: 20px;
+}
+
+.menu-footer__item:not(:last-child) {
+    margin-bottom: 16px;
+}
+
+.menu-footer__link {
+    color: #666;
+}
+
+.menu-footer__link:hover {
+    text-decoration: underline;
+}
+
+
+
+
+.social-footer__title {
+    text-transform: uppercase;
+    color: #121212;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    margin-bottom: 12px;
+}
+
+.social-footer__items {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+
+.footer__copy {
+    padding-top: 80px;
+    text-align: center;
+}
+
+@media (max-width: 991.98px) {
+    .footer {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .body-footer {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .body-footer__column:first-child {
+        flex: 1 1 100%;
+    }
+
+    .body-footer__column_full {
+        flex: 0 1 50%;
+    }
+
+    .menu-footer {
+        display: flex;
+        gap: 50px;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .footer__copy {
+        padding-top: 50px;
+    }
 }
