--- a/css/main.css
+++ b/css/main.css
@@ -30,9 +30,7 @@ body {
 body {
     line-height: 1;
     background: #F7F7F7;
-    /*font-family: Poppins;
-    color: #666666;
-    background-image: linear-gradient(rgba(219, 219, 221, 0.7), rgba(219, 219, 221, 0.7)), url(/img/armor/camo_fon.jpeg);*/
+    
 }
 
 a {
@@ -49,8 +47,6 @@ li {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-
-
 
 }
 
@@ -88,13 +84,14 @@ li {
 
 }
 
-/* ---------------------------------------- */
+/* -----------------HEADER----------------------- */
 .header {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 50;
+    
 }
 
 .header__container {
@@ -228,6 +225,25 @@ li {
     opacity: 0,6;
 }
 
+
+
+.main__image img {
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (max-width: 767px) {
+    .main__image img {
+        max-width: 650px;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    .main__image img {
+        max-width: 400px;
+    }
+}
+
 /*===============================================*/
 .categories {
     padding-top: 90px;
@@ -344,50 +360,39 @@ li {
 
 /*--------------categories correcr---------*/
 
-
 .img-project {
-    
     display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 70px;
-        row-gap: 35px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 70px;
+    row-gap: 35px;
 }
 
-/*@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
     .img-project {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 28px;
-        margin-top: 40px;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 479px) {
     .img-project {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 30px;
-        gap: 28px;
+        grid-template-columns: 1fr;
     }
 }
 
-@media screen and (min-width: 1200px) {
-    .img-project {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        margin-top: 50px;
-        justify-content: center;
-    }
-}*/
+.img1-wrap {
+    position: relative;
+    width: 100%;
+}
 
+.img1-wrap img {
+    width: 100%;
+    height: auto;
+}
 
+.img1-txt {
+    margin-top: 10px;
+}
 
-/*.flex-element {
-    align-items: center;
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-}*/
 
 .img1 {
     border-radius: 1px;
@@ -523,7 +528,6 @@ li {
 }
 
 .input-wrapper input {
-    
     margin-bottom: 40px;
     width: 300px;
     height: 50px;
@@ -532,33 +536,45 @@ li {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     justify-content: center;
     padding: 10px;
-    
 }
 
-.title-inp{
+.title-inp {
     margin-right: 5px;
-        margin-bottom: 15px;
-        font-size: 16px;
-        color: #2400FF;
-        text-align: center;
+    margin-bottom: 15px;
+    font-size: 16px;
+    color: #2400FF;
+    text-align: center;
 }
+
+.img1-wrap img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+@media screen and (max-width: 767px) {
+    .input-section {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .input-wrapper input {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 479px) {
+    .input-section {
+        grid-template-columns: 1fr;
+    }
+}
+
 
 
 
 
 /*---------FOOTER-----------*/
-/*.footer__container{
-    min-width: 1146px;
-    min-height: 128px;
-    margin-top: 80px;
-    background: #C20000;
-    
-}
-.footer-txt{
-    text-align: center;
-    margin-bottom: 50px;
-    color: #F7F7F7;
-}*/
+
 
 
 .footer__container {
